# rt-rs

./: Cargo.toml  build.rs
models/dragon/: dragon.mtl
models/furina_b/: furina.mtl
models/furina_w/: furina.mtl
shaders/: path_tracing.frag  screen.frag  screen.vert
src/: aabb.rs  bvh.rs  camera.rs  fbo.rs  lib.rs  main.rs  mesh.rs  model.rs  object.rs  renderer.rs  screen.rs  shader.rs  texture.rs  utils.rs
src/ui/: ui.slint
